derive/tests/snapshots/wrapper_methods/Membership/pass_1/create_active_membership.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Create a row in the `active_membership` table.
    pub fn create_active_membership<'a>(
        &'a self,
        active_membership: CreateActiveMembership,
    ) -> Result<Membership, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let id = u64::default();
        let account_id = active_membership.account_id.value();
        let active_membership = Membership { id, account_id };
        let mut the_same_or_another_active_membership: Option<Membership> = None;
        if account_id.ne(&0) {
            match self.get_account_by_id(active_membership.get_account_id()) {
                Ok(_) => {}
                Err(_) => {
                    return Err(
                        crate::spacetimedsl::error::SpacetimeDSLError::ReferenceIntegrityViolation(crate::spacetimedsl::error::ReferenceIntegrityViolationError::OnCreateOrUpdate {
                            table_name: "active_membership".into(),
                            create_or_update: crate::spacetimedsl::error::CreateOrUpdate::Create,
                            column_names_and_row_values: format!(
                                "{{ account_id : {} }}", active_membership.get_account_id()
                                .value()
                            )
                                .into(),
                        }),
                    );
                }
            };
        }
        let unique_column_values = (
            active_membership.id.clone(),
            active_membership.account_id.clone(),
        );
        match self.db().active_membership().try_insert(active_membership) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "active_membership".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ id : {}, account_id : {} }}", unique_column_values.0,
                                unique_column_values.1
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "active_membership".into(),
                        })
                    }
                }
            }
        }
    }
}
