derive/tests/snapshots/wrapper_methods/Membership/pass_1/get_all_active_memberships.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `active_membership` table.
    pub fn get_all_active_memberships<'a>(&'a self) -> impl Iterator<Item = Membership> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().active_membership().iter()
    }
}
