derive/tests/snapshots/wrapper_methods/Membership/pass_1/table.snap
---
source: derive/src/characterization_tests.rs
---
// Documentation appended to the struct:
///
/// # Foreign keys of the `active_membership` table
///
/// - `account_id` references the `id` column of the `account` table (`self`).
///   - On delete: `Error`
///   - On soft delete: none, the `account` table is not soft-deletable

pub trait this_compilation_error_occurs_because_the_active_membership_table_has_no_foreign_key_attribute_referencing_the_account_table {}
const _: () = {
    use self::this_compilation_error_occurs_because_the_account_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_active_membership_table;
    use self::this_compilation_error_occurs_because_your_foreign_key_referencing_the_account_table_needs_to_define_a_strategy_for_on_soft_delete_or_the_account_table_has_no_referenced_by_attribute_referencing_the_active_membership_table;
};
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct MembershipId {
    value: u64,
}
impl Default for MembershipId {
    fn default() -> MembershipId {
        MembershipId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for MembershipId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "MembershipId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for MembershipId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Membership> for MembershipId {
    fn from(value: &Membership) -> Self {
        MembershipId {
            value: value.id.clone(),
        }
    }
}
impl From<&Membership> for Option<MembershipId> {
    fn from(value: &Membership) -> Option<MembershipId> {
        Some(MembershipId {
            value: value.id.clone(),
        })
    }
}
impl From<&MembershipId> for Option<MembershipId> {
    fn from(value: &MembershipId) -> Option<MembershipId> {
        use crate::spacetimedsl::Wrapper;
        Some(MembershipId::new(value.value()))
    }
}
impl From<&MembershipId> for MembershipId {
    fn from(value: &MembershipId) -> Self {
        use crate::spacetimedsl::Wrapper;
        MembershipId::new(value.value())
    }
}
impl Membership {
    ///
    pub fn get_id(&self) -> MembershipId {
        use crate::spacetimedsl::Wrapper;
        MembershipId::new(self.id.clone())
    }
    /**References the `id` column of the `account` table (`self`).

- On delete: `Error`
- On soft delete: none, the `account` table is not soft-deletable*/
    pub fn get_account_id(&self) -> AccountId {
        use crate::spacetimedsl::Wrapper;
        AccountId::new(self.account_id.clone())
    }
    /**References the `id` column of the `account` table (`self`).

- On delete: `Error`
- On soft delete: none, the `account` table is not soft-deletable*/
    pub fn set_account_id(&mut self, account_id: impl Into<AccountId>) -> AccountId {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(
            &mut self.account_id,
            account_id.into().value(),
        );
        AccountId::new(old_value)
    }
}
///
pub struct CreateActiveMembership {
    pub account_id: AccountId,
}

// Generated DSL methods:
// count_of_all_active_memberships
// create_active_membership
// delete_active_membership_by_account_id
// delete_active_membership_by_id
// execute_on_delete_strategies_of_the_active_membership_table_after_multiple_rows_of_the_account_table_were_deleted
// execute_on_delete_strategies_of_the_active_membership_table_after_one_row_of_the_account_table_was_deleted
// get_active_membership_by_account_id
// get_active_membership_by_id
// get_all_active_memberships
// update_active_membership_by_id
