derive/tests/snapshots/wrapper_methods/Membership/pass_1/wrapper_methods.snap
---
source: derive/src/characterization_tests.rs
---
impl AccountId {
    /**Get the `Membership` whose `account_id` column references this `AccountId`.

Use it like `account_id.get_active_membership(&dsl)`.*/
    pub fn get_active_membership<'a, T: 'a + crate::spacetimedsl::ReadContext>(
        &self,
        dsl: impl Into<crate::spacetimedsl::ReadOnlyDSL<'a, T>>,
    ) -> Result<Membership, crate::spacetimedsl::error::SpacetimeDSLError> {
        dsl.into().get_active_membership_by_account_id(self)
    }
}
